src/SIL.XForge.Scripture/ClientApp/src/_text.scss
@import 'src/variables';
@import 'quill/dist/quill.snow.css';
@import 'usx';

quill-editor {
  height: 100%;
  > .ql-container {
    letter-spacing: 0.03125em;
    > .ql-editor {
      font-family: Roboto, 'Noto Sans Kayah Li', sans-serif;
      line-height: 1.6;
      width: 100%;
      word-break: break-word;
      padding: 2em 15px 15px 15px;
      text-align: start;
    }
  }
}

.ql-container.ql-snow {
  border: 1px solid $border-color;
}

.has-draft {
  .ql-container {
    border: 4px dashed $draft-color;
  }
}

.read-only-editor.selectable-verses usx-segment {
  cursor: pointer;
}

.read-only-editor > .ql-container {
  > .ql-editor {
    usx-segment {
      padding: 0.2em 0;
    }

    .highlight-segment {
      background-color: #ffeb3b;
    }

    .question-segment,
    usx-segment.commenter-selection {
      background-image: linear-gradient(to right, gray 75%, transparent 75%);
      background-position: bottom 0.2em left;
      background-repeat: repeat-x;
      background-size: 7px 1px;
      position: relative;
      cursor: pointer;
    }

    .question-segment {
      &[data-question-count] {
        &:before {
          content: '?';
          border-radius: 50%;
          width: 1.5em;
          height: 1.5em;
          font-size: 0.8em;
          display: flex;
          align-content: center;
          justify-content: center;
          background: $questions;
          color: #fff;
          font-weight: bold;
          position: absolute;
          top: 0.2em;
          text-indent: 0;
        }
      }

      &[data-question-count]:not([data-question-count='1']) {
        &:after {
          content: attr(data-question-count);
          border-radius: 50%;
          width: 1.5em;
          height: 1.5em;
          font-size: 0.7em;
          display: flex;
          align-content: center;
          justify-content: center;
          background: $questionAnswerBubbleBackgroundColor;
          color: $questionAnswerBubbleColor;
          font-weight: bold;
          position: absolute;
          top: -0.55em;
          text-indent: 0;
        }
      }
    }
  }

  > .highlight-marker {
    display: none;
  }
}

.read-only-editor[dir='rtl'] > .ql-container > .ql-editor .question-segment[data-question-count]:before {
  transform: scaleX(-1);
}

.comment-enabled-editor {
  quill-editor:not(.read-only-editor) .ql-editor {
    padding-inline-start: 10px;
    padding-inline-end: 40px;
  }

  // only commenter users on devices with screens larger than large need to account for the add comment FAB
  quill-editor.read-only-editor .ql-editor {
    @include media-breakpoint-up(lg) {
      padding-inline-start: 10px;
      padding-inline-end: 40px;
    }
  }
}

quill-editor.ltr {
  .question-segment[data-question-count] {
    margin-left: 1.75em;

    &:before {
      left: -2.25em;
    }
    &:after {
      left: -1.5em;
    }
  }
}
quill-editor.rtl {
  .question-segment[data-question-count] {
    margin-right: 1.75em;
    &:before {
      right: -2.25em;
    }

    &:after {
      right: -1.5em;
    }
  }
}

.ql-editor .note-thread-segment {
  position: relative;
  & display-note {
    &:before {
      cursor: pointer;
      content: '';
      width: 1.25rem;
      height: 1.25rem;
      display: inline-block;
      background: var(--icon-file) no-repeat;
      margin: 0 0.1em;
      border: solid 1px transparent;
    }
    &.note-thread-highlight {
      &:before {
        border: solid 1px #a9ca25;
      }
    }
  }
  & display-text-anchor {
    background-image: linear-gradient(to right, gray 75%, transparent 75%);
    background-position: bottom left;
    background-repeat: repeat-x;
    background-size: 7px 1px;
    position: relative;
  }
}

.template-editor > .ql-container {
  > .ql-editor {
    background-color: #f5f3ef;

    usx-para,
    p {
      margin-bottom: 1em;

      > usx-para-contents {
        padding: 0.45em 0.3em;
        border-radius: 4px;
        display: inline;
        box-sizing: border-box;

        box-decoration-break: clone;

        color: rgba(0, 0, 0, 0.8);
        background-color: white;
      }
    }

    .highlight-segment {
      color: black;
    }

    .highlight-para > usx-para-contents {
      box-shadow: 2px 4px 4px -4px #bfb092;
    }
  }

  > .highlight-marker {
    width: 0;
    height: 0;
    border-left: 4px solid #a9ca25;
    position: absolute;
    top: 0px;
    left: 6px;
  }
}

// workaround for Firefox bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1569107
// using "box-decoration-break: clone" or blur radius in a "box-shadow" with RTL text can cause weird behavior
.template-editor.rtl[data-browser-engine='gecko'] > .ql-container > .ql-editor {
  usx-para,
  p {
    > usx-para-contents {
      box-decoration-break: slice;
    }
  }

  .highlight-para > usx-para-contents {
    box-shadow: 1px 1px 0px 1px #ede6de;
  }
}

.mark-invalid {
  .invalid-block > usx-para-contents,
  .invalid-block > span,
  .invalid-inline {
    background: url(data:image/gif;base64,R0lGODlhCgAEAMIEAP9BGP6pl//Wy/7//P///////////////yH5BAEKAAQALAAAAAAKAAQAAAMROCOhK0oA0MIUMmTAZhsWBCYAOw==)
      repeat-x scroll 0 100% transparent;
    padding-bottom: 3px;
  }
}

.highlight-para usx-segment[data-style-description]:first-child:before {
  content: attr(data-style-description);
  background-color: $greyDark;
  color: white;
  position: absolute;
  white-space: nowrap;
  border-radius: 4px;
  padding: 1px 5px;
  z-index: 1;
  top: -2em;
  font-size: 0.75rem;
  font-style: normal;
  font-weight: normal;
  text-indent: 0;
}

usx-segment {
  position: relative;
}

quill-editor.ltr .highlight-para usx-segment:first-child:before {
  left: -1em;
}
quill-editor.rtl .highlight-para usx-segment:first-child:before {
  right: -1em;
}

usx-segment.draft {
  color: $draft-color;
  font-style: italic;
}

